--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
   "name": "vue-d3",
   "version": "1.0.0",
-  "description": "Charts with d3.js and vue.js",
+  "description": "A Vue.js project",
   "author": "Dang Van Thanh <dangvanthanh@dangthanh.org>",
   "private": true,
   "scripts": {
     "build": "run-s build:**",
     "build:js": "cross-env NODE_ENV=production rollup -c",
-    "build:autoprefixer": "postcss --use autoprefixer -o public/assets/css/app.css public/assets/css/app.css",
-    "build:cssnano": "cssnano public/assets/css/app.css public/assets/css/app.css",
-    "dev": "cross-env NODE_ENV=development rollup -cw"
+    "build:autoprefixer": "postcss --use autoprefixer -o dist/assets/css/app.css dist/assets/css/app.css",
+    "build:cssnano": "cssnano dist/assets/css/app.css dist/assets/css/app.css",
+    "serve": "cross-env NODE_ENV=development rollup -cw"
   },
   "dependencies": {
-    "vue": "^2.5.16"
+    "d3-scale": "^2.0.0",
+    "d3-selection": "^1.3.0",
+    "d3-shape": "^1.2.0",
+    "vue": "^2.5.13"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.3",
-    "cross-env": "^3.1.2",
+    "autoprefixer": "^8.0.0",
+    "babel-core": "^6.26.0",
+    "cross-env": "^5.0.5",
     "cssnano-cli": "^1.0.4",
-    "npm-run-all": "^3.1.2",
-    "postcss-cli": "^2.6.0",
-    "rollup": "^0.36.4",
-    "rollup-plugin-alias": "^1.2.0",
-    "rollup-plugin-buble": "^0.14.0",
-    "rollup-plugin-commonjs": "^5.0.4",
-    "rollup-plugin-livereload": "^0.3.1",
+    "npm-run-all": "^4.0.1",
+    "postcss-cli": "^5.0.0",
+    "rollup": "^0.57.1",
+    "rollup-plugin-alias": "^1.4.0",
+    "rollup-plugin-buble": "^0.19.1",
+    "rollup-plugin-uglify": "^3.0.0",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-globals": "^1.1.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-serve": "^0.1.0",
-    "rollup-plugin-uglify": "^1.0.1",
-    "rollup-plugin-vue": "^2.2.10",
-    "rollup-watch": "^2.5.0",
-    "uglify-js": "^2.7.5"
+    "rollup-plugin-node-resolve": "^3.0.2",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-vue": "^3.0.0",
+    "vue-template-compiler": "^2.5.13"
   }
 }
