--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serve": "cross-env NODE_ENV=development rollup -cw"
   },
   "dependencies": {
+    "d3-axis": "^1.0.8",
     "d3-scale": "^2.0.0",
     "d3-selection": "^1.3.0",
     "d3-shape": "^1.2.0",
