--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "public": "poi build example/index.js --out-dir public"
   },
   "devDependencies": {
-    "bili": "^4.9.0",
-    "husky": "^4.2.5",
+    "@dangvanthanh/prettier-config": "^1.0.0",
+    "bili": "5.0.5",
+    "husky": "7.0.2",
     "poi": "^12.7.5",
-    "pretty-quick": "^2.0.1",
+    "pretty-quick": "3.1.1",
     "rollup-plugin-vue": "^5.1.6",
     "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
-    "d3": "^5.15.1"
-  }
+    "d3": "5.15.1",
+    "vue": "^2.6.14"
+  },
+  "prettier": "@dangvanthanh/prettier-config"
 }
