--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-d3",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "Chart with Vue.js and D3.js",
   "author": "Dang Van Thanh <dangvanthanh@dangthanh.org>",
   "private": true,
   "scripts": {
@@ -13,14 +13,14 @@
     "@dangvanthanh/prettier-config": "^1.0.0",
     "bili": "5.0.5",
     "husky": "7.0.2",
-    "poi": "^12.7.5",
+    "poi": "^12.10.3",
     "pretty-quick": "3.1.1",
-    "rollup-plugin-vue": "^5.1.6",
-    "vue-template-compiler": "^2.6.11"
+    "rollup-plugin-vue": "^5.1.9",
+    "vue-template-compiler": "^2.7.15"
   },
   "dependencies": {
     "d3": "7.0.1",
-    "vue": "^2.6.14"
+    "vue": "^2.7.15"
   },
   "prettier": "@dangvanthanh/prettier-config"
 }
